2007-11-07  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
        * daemon/gvfsbackendtest.c:
        * daemon/gvfsbackendtrash.c:
	Ansi C fixes from Jens Granseuer

2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* daemon/gvfsdaemonutils.c: (dbus_connection_send_fd):
	* daemon/mount.c: (vfs_mount_to_dbus), (dbus_message_function):
	Fix typo: availible -> available.

2007-11-06  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.0.1 ===

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * daemon/Makefile.am:
        * test/Makefile.am:
	Fix make distcheck

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_file_iface_init):
	Actually export get_uri_scheme
	
        * client/gdaemonfileinputstream.c:
        (g_daemon_file_input_stream_query_info):
	Set NOT_SUPPORTED error

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * common/gmountoperationdbus.c:
        * common/gmounttracker.c:
        * daemon/gvfsbackend.h:
        * daemon/gvfschannel.h:
	Remove use of old giotypes.h header

2007-11-03  Paolo Borelli  <pborelli@katamail.com>

	* client/gdaemonvfs.c (get_mountspec_from_uri):
	Do not leak the decoded uri.

2007-11-02  Sebastien Bacher  <seb128@ubuntu.com>

	* common/Makefile.am: use the correct gmountoperationdbus.h naming

2007-11-01  Christian Kellner  <gicmo@gnome.org>

	* client/*.[ch]:
	* common/*.[ch]:
	* daemon/*.[ch]:
	* test/*.[ch]:
	Add copyright information to source files.

2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
	Implement get_uri_scheme
	
        * daemon/mount.c:
	Add needed includes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Implement contains_file and get_relative_path

2007-10-31  Alexander Larsson  <alexl@redhat.com>
