@@ -1,5 +1,10 @@
 2007-11-07  Alexander Larsson  <alexl@redhat.com>
 
+        * client/gdaemonvfs.c:
+	Update to new gvfs construction API
+
+2007-11-07  Alexander Larsson  <alexl@redhat.com>
+
         * common/gdbusutils.c:
         * daemon/gvfsbackendtest.c:
         * daemon/gvfsbackendtrash.c:
